<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/ui_custom_input_area_title_style"
            android:text="@string/login_title_1003" />

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 证件类型 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/ui_custom_input_title_style"
                android:text="@string/forget_portal_title_1002" />

            <com.xtbank.ui.spinner.UISelectionBoxView
                android:id="@+id/first_login_sec_setting_id_type_text_view"
                style="@style/ui_custom_edit_text_style"
                android:drawableRight="@drawable/ui_view_selection_box_arrow"
                android:paddingRight="8dp"
                ui:entries="@array/id_type_array"
                ui:values="@array/id_type_value_array" />
        </LinearLayout>

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 证件号码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/ui_custom_input_title_style"
                android:text="@string/forget_portal_title_1003" />

            <EditText
                android:id="@+id/first_login_sec_setting_id_no_edit_text"
                style="@style/ui_custom_edit_text_style"
                android:hint="@string/ui_edit_text_hint"
                android:maxLength="32" />
        </LinearLayout>

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <TextView
            style="@style/ui_custom_input_area_title_style"
            android:text="@string/login_title_1006" />

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 原密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/ui_custom_input_title_style"
                android:text="@string/login_title_1007" />

            <com.seaway.pinpad.main.SWPINPadEdit
                android:id="@+id/first_login_sec_setting_old_pwd_edit_text"
                style="@style/ui_custom_edit_text_style"
                android:hint="@string/ui_edit_text_hint"
                android:maxLength="20" />
        </LinearLayout>

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 新密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/ui_custom_input_title_style"
                android:text="@string/login_title_1008" />

            <com.seaway.pinpad.main.SWPINPadEdit
                android:id="@+id/first_login_sec_setting_new_pwd_edit_text"
                style="@style/ui_custom_edit_text_style"
                android:hint="@string/ui_edit_text_hint"
                android:maxLength="20" />
        </LinearLayout>

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 确认密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/ui_custom_input_title_style"
                android:text="@string/login_title_1009" />

            <com.seaway.pinpad.main.SWPINPadEdit
                android:id="@+id/first_login_sec_setting_confirm_pwd_edit_text"
                style="@style/ui_custom_edit_text_style"
                android:hint="@string/ui_edit_text_hint"
                android:maxLength="20" />
        </LinearLayout>

        <View style="@style/ui_custom_horizontal_splite_line_style" />

        <!-- 下一步按钮 -->
        <Button
            android:id="@+id/first_login_sec_setting_next_button"
            style="@style/ui_custom_button_style"
            android:layout_marginTop="14dp"
            android:text="设置" />

    </LinearLayout>
</ScrollView>