<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_portal_background">

    <!-- 银行LOGO -->
    <ImageView
        android:id="@+id/login_portal_bank_logo_image_view"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_portal_bank_logo" />

    <!-- 注册 -->
    <TextView
        android:id="@+id/login_portal_register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="18dp"
        android:text="@string/login_portal_reg_title"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <!-- 输入框域 -->
    <LinearLayout
        android:id="@+id/login_portal_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_portal_bank_logo_image_view"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_portal_input_layout_background"
        android:orientation="vertical">

        <!-- 手机号码 -->
        <EditText
            android:id="@+id/login_portal_mobile_edit_text"
            style="@style/ui_custom_edit_text_style"
            android:layout_height="42dp"
            android:drawableLeft="@drawable/login_portal_mobile_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_portal_hint_1001"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="#8cffffff"
            android:textSize="14sp" />

        <View
            style="@style/ui_custom_horizontal_splite_line_style"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#7fffffff" />

        <!-- 密码 -->
        <com.seaway.pinpad.main.SWPINPadEdit
            android:id="@+id/login_portal_pwd_edit_text"
            style="@style/ui_custom_edit_text_style"
            android:layout_height="42dp"
            android:drawableLeft="@drawable/login_portal_pwd_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_portal_hint_1002"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="#8cffffff"
            android:textSize="14sp" />

        <View
            style="@style/ui_custom_horizontal_splite_line_style"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#7fffffff" />

        <!-- 验证码 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_portal_code_image_view"
                android:layout_width="72dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/login_portal_code_edit_text"
                style="@style/ui_custom_edit_text_style"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/login_portal_code_image_view"
                android:drawableLeft="@drawable/login_portal_code_icon"
                android:drawablePadding="10dp"
                android:hint="@string/login_portal_hint_1003"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="#8cffffff"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/login_portal_login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_portal_input_layout"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_portal_button_normal"
        android:text="@string/login_portal_login_button_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <!-- 记住账号 -->
    <CheckBox
        android:id="@+id/login_portal_remember_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login_portal_login_button"
        android:background="@null"
        android:button="@null"
        android:drawableLeft="@drawable/login_portal_remember"
        android:drawablePadding="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp"
        android:text="@string/login_portal_remember_title"
        android:textColor="#ccffffff"
        android:textSize="12sp" />

    <!-- 忘记密码 -->
    <TextView
        android:id="@+id/login_portal_forget_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_portal_login_button"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/login_portal_forget_title"
        android:textColor="#ccffffff"
        android:textSize="12sp" />

</RelativeLayout>